--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -1,7 +1,7 @@
 {
    "punc": {
-      "colon": " ",
       "point": "",
+      "colon": " ",
       "num": "{{num,counttobo}}",
       "lpar": "（",
       "rpar": "）"
@@ -13,7 +13,7 @@
    },
    "home": {
       "BUDA": "བུདྡྷ།",
-      "titleBDRC1": "ནང་བསྟན་b",
+      "titleBDRC1": "ནང་བསྟན་",
       "titleBDRC2": "དཔེ་ཚོགས་",
       "titleBDRC3": "ལྟེ་གནས།",
       "archives1": "བུདྡྷ་དྲ་ཐོག་",
@@ -38,9 +38,11 @@
    "types": {
       "any": "གང་རུང་།",
       "corporation": "ཚོགས་སྡེ།",
+      "corporation_plural": "ཚོགས་སྡེ།",
       "etext": "འཕྲུལ་ཡིག",
-      "etext_title": "འཕྲུལ་ཡིག",
+      "etext_plural": "འཕྲུལ་ཡིག",
       "item": "དཔེ་ཆ།",
+      "item_plural": "དཔེ་ཆ།",
       "lineage": "ཆོས་བརྒྱུད།",
       "person": "མི་སྣ།",
       "place": "ས་གནས།",
@@ -84,6 +86,7 @@
          "title": "གཞི་གྲངས་ཀྱི་རིགས།"
       },
       "widgets": {
+         "unknown": "གསལ་ཁ་མེད་པ།",
          "root": "ཡོང་ཁུངས།",
          "tree": "རིགས།",
          "relationInv": "འབྲེལ་བའི་རིགས་མགོ་གཞུག་ལྡོག",
@@ -122,6 +125,7 @@
       "open": "བཀག་རྒྱ་མེད་པ།",
       "fairUse": "ཚུལ་མཐུན་བཀོལ་སྤྱོད། འགོ་མཇུག་གཉིས་ནས་ཤོག་ངོས་ཉི་ཤུ་ཉི་ཤུ་ལས་ལྷག་ལྟ་ཀློག་བྱེད་མི་ཐུབ།",
       "tempo": "གནས་སྐབས་རིང་གི་བཀག་རྒྱ།",
+      "quality": "སྤུས་ཚད་ཞན་པའི་བཀག་རྒྱ།",
       "sealed": "བཀའ་རྒྱ་མ།",
       "view": "བཤེར་པར་སྟོན།",
       "scans": "བཤེར་པར་ཡོད།",
@@ -132,6 +136,7 @@
    "prop": {
       "tmp:bestMatch": "བཙལ་འབྲས་མཐུན་ཤོས།",
       "tmp:relationType": "འབྲེལ་བ།",
+      "tmp:relationType_plural": "འབྲེལ་བ།",
       "tmp:nameMatch": "རྙེད་སོན་བྱུང་བའི་མིང་།",
       "tmp:nameMatch_plural": "མིང་རྙེད་ཚད།",
       "tmp:otherTitle": "མཚན་བྱང་གཞན།",
@@ -157,6 +162,7 @@
       "tmp:forWork": "བརྩམས་ཆོས།",
       "tmp:provider": "མཁོ་འདོན་པ།",
       "tmp:author": "རྩོམ་པ་པོ།",
+      "tmp:author_plural": "རྩོམ་པ་པོ།",
       "bdo:note": "ཟུར་མཆན།",
       "bdo:note_plural": "ཟུར་མཆན།",
       "tmp:assetAvailability": "དཔེ་ཆ་ཡོད་མེད།",
@@ -168,15 +174,20 @@
       "bdo:personTeacherOf_plural": "སློབ་ཕྲུག",
       "bdo:personStudentOf": "དགེ་རྒན།",
       "bdo:personStudentOf_plural": "དགེ་རྒན།",
+      "bdo:biblioNote": "དཔེ་ཐོའི་ཟུར་མཆན།",
+      "bdo:biblioNote_plural": "དཔེ་ཐོའི་ཟུར་མཆན།",
       "tmp:propHasScans": "བཤེར་པར།",
       "tmp:propHasEtext": "འཕྲུལ་ཡིག",
       "bf:identifiedBy": "ཨང་རྟགས།",
       "rdfs:subClassOf": "དབྱེ་གཞི།",
       "tmp:isCreator": "མཛད་མཁན།",
       "tmp:hasImage": "བཤེར་པར།",
+      "bdo:CorporationMemberNotSpecified": "ཚོགས་མི།",
       "tmp:hasEtext": "འཕྲུལ་ཡིག",
       "unspecified": "རིགས་མ་དགར་བ།",
       "true": "ཡིན།",
+      "bdo:eTextIsVolume": "པོད།",
+      "bdo:eTextInVolume": "པོད།",
       "tmp:TibetanBuddhistTexts": "བོད་བརྒྱུད་ནང་བསྟན་གསུང་རབ།",
       "tmp:BonpoTexts": "བོན་གྱི་གསུང་རབ།",
       "tmp:SanskritTexts": "ལེགས་སྦྱར་སྐད་ནང་ཡོད་པའི་གསུང་རབ།",
@@ -219,11 +230,11 @@
       "expandC": "མང་ཙམ་སྟོན།",
       "hideC": "སྐུང་།",
       "openE": "འཕྲུལ་ཡིག་ཀློག",
+      "openEin": "འཕྲུལ་ཡིག་ནང་སྟོན།",
       "hasInstance": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
       "hasInstance_plural": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
       "assoc": "{{type}} འདི་དག་དང་འབྲེལ་ཡོད་: {{- name}}",
       "moreres": "འདི་ལས་' {{txt}} མང་བ་འདུག, དེ་དག་ལ་བལྟ་འདོད་ཡོད་དམ།",
-      "openEin": "འཕྲུལ་ཡིག་ནང་སྟོན།",
       "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
       "openO": "དཀར་ཆག་ནང་སྒོ་ཕྱེ།",
       "bdDate":"{{birth}} – {{death}}",
@@ -242,6 +253,7 @@
       "mainInfo": "གནས་ཚུལ་ཞིབ་ཕྲ།",
       "outline": "དཀར་ཆག",
       "related": "འབྲེལ་ཡོད་བརྩམས་ཆོས།",
+      "relatedR": "འབྲེལ་ཡོད་རྒྱུ་ཆ།",
       "extended": "གནས་ཚུལ་འཕར་མ།",
       "userP": "སྤྱོད་མཁན་གྱི་གནས་ཚུལ།",
       "personalI": "སྒེར་གྱི་གནས་ཚུལ།",
@@ -331,6 +343,12 @@
       "seeR_plural": "བཙལ་འབྲས་ལ་གཟིགས།",
       "link": "དྲ་ཐག:",
       "link_plural": "དྲ་ཐག་ཁག:",
+      "preview3": "preview 3",
+      "browseA": "Browse all {{count}}",
+      "seeI": "See {{count}} version",
+      "seeI_plural": "See {{count}} versions",
+      "seeM": "{{count}} more version available",
+      "seeM_plural": "{{count}} more versions available",
       "card": "{{num,counttobo}}",
       "inter": "{{min,counttobo}}~{{max,counttobo}}",
       "ordInter": "དུས་རབས་{{min,counttobo}} ནས་{{max,counttobo}} བར།"
