--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -454,8 +454,8 @@
       "view": "སྟོན།",
       "metadata": "གཞི་གྲངས་གོང་མ།",
       "manifest": "IIIF manifest",
-      "page": "པར་གྲངས། {{num,counttobo}}",
-      "volume": "པོད། {{num,counttobo}}",
+      "page": "པར་གྲངས། {{num}}",
+      "volume": "པོད། {{num}}",
       "availableScans": "ཤོག་ངོས་འདིའི་བཤེར་པར་གང་ཡོད།",
       "about": "ཁོང་གི་སྐོར།",
       "createdB": "ཁོང་གི་བརྩམས་ཆོས།",
