--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -459,6 +459,8 @@
       "availableScans": "ཤོག་ངོས་འདིའི་བཤེར་པར་གང་ཡོད།",
       "about": "ཁོང་གི་སྐོར།",
       "createdB": "ཁོང་གི་བརྩམས་ཆོས།",
+      "printedA": "དཔར་ཐེངས། {{resLabel.value}}",
+      "printedA_plural": "དཔར་ཐེངས། {{resLabel.value}}",
       "extended": "གཞི་གྲངས་གོང་མ་རྒྱས་པ།",
       "showD": "ཞིབ་ཕྲ་སྟོན།",
       "hideD": "ཕྱིར་བསྡུ།",
@@ -481,7 +483,10 @@
       "nbTrans": " ( འགྱུར་མ། {{count}})",
       "nbTrans_plural": " (འགྱུར་མ། {{count}})",
       "openO": "འདིའི་ནང་སྒོ་ཕྱེ། {{src}}",
+      "noT": "[མཚན་བྱང་མེད་པ།]",
       "browsE": "མིག་བཤེར།",
+      "memberO": "ཚོགས་མི། {{resLabel.value}}",
+      "memberO_plural": "ཚོགས་མི། {{resLabel.value}}",
       "unpag": "འཕྲུལ་ཡིག་གི་ཤོས་ངོས་འདི་ཕལ་ཆེར་མ་ཕྱི་དཔེ་ཆའི་ཤོག་ངོས་ལ་ཐད་ཀར་འབྲེལ་ཡོད་པ་འདྲ། འོན་ཀྱང་། ང་ཚོས་ངེས་གཏན་གྱི་གནས་འབྲེལ་ས་ཁྲ་མཁོ་སྤྲོད་བྱ་མི་ཐུབ།.",
       "pageN": "p. {{num,counttobo}}",
       "noAssoc": "འདི་དང་འབྲེལ་བའི་རྒྱུ་ཆ་རྙེད་མ་སོང་།",
@@ -490,7 +495,7 @@
       "commitV": "བཀོལ་སྤྱོད་ཀྱི་ལོ་རྒྱུས་སྟོན།",
       "commitH": "བཀོལ་སྤྱོད་ཀྱི་ལོ་རྒྱུས་སྦེད།",
       "citation": {
-         "mla": "Modern Language Association",
+         "mla": "དེང་དུས་ཀྱི་སྐད་ཡིག་ཁག",
          "chicago": "Chicago Manual of Style",
          "apa": "American Psychological Association"
       },
@@ -500,22 +505,22 @@
       "clipB": "འདི་ངོ་བཤུ་བྱོས།",
       "clipC": "ཡོང་ཁུངས་ངོ་བཤུ་བྱས་ཡོད།",
       "export": "ཕྱིར་འདྲེན།",
-      "export2": "Export to {{format}}",
-      "exportRIS": "Export a RIS file (for EndNote, ProCite, Reference Manager, Zotero, Mendeley, etc.)",
-      "noImages": "BDRC does not have associated images, the record is purely for reference",
+      "export2": "འདི་ལྟར་ཕྱིར་འདྲེན་བྱེད་ {{format}}",
+      "exportRIS": "RIS ཡི་ཡིག་ཆ་ཕྱིར་འདྲེན། (for EndNote, ProCite, Reference Manager, Zotero, Mendeley, etc.)",
+      "noImages": "BDRC ལ་རྒྱུ་ཆ་ཁོ་ན་ཙམ་མ་གཏོགས་བཤེར་པར་མེད།",
       "getPDF": "བཤེར་པར་དགོས་སམ་ PDF དགོས།",
-      "print": "Print on demand",
+      "print": "པར་འདེབས་བྱེད།",
       "clipT": "ཡིག་རྐྱང་ངོ་བཤུ་བྱས་ཡོད།",
-      "orderVT": "Copy the text below, click on the following link and paste it in the comments box:",
-      "contactVT": "Contact Vimala Treasures",
-      "contactVTcopy": "I wish to order 1 copy of {{uri}}",
-      "assoc":"Associated works",
+      "orderVT": "གཤམ་བཀོད་ཡི་གེ་རྣམས་ངོ་བཤུ་བྱས་ཏེ་དེའི་འོག་གི་དྲ་ཐག་སྒང་ལ་བསྣུན་ནས་མཆན་འགོད་སའི་ནང་ཞོག",
+      "contactVT": "Vimala Treasures ཚོགས་པར་འབྲེལ་བ་བྱོས།",
+      "contactVTcopy": "ངས་ {{uri}}",
+      "assoc":"ཡི་ཕྱོགས་བསྒྲིགས་འདྲ་བཤུས་ཤིག་མངགས་ན་འདོད།",
       "location1": " (v. {{vol}}, img. {{page}})",
       "locationM": " (v. {{vol}}, img. {{page}}-{{endPage}})",
       "location1vol1": " (img. {{page}})",
       "location1volM": " (img. {{page}}-{{endPage}})",
-      "showPnodes":"Previous",
-      "showNnodes":"Next"
+      "showPnodes":"སྔོན་མ།",
+      "showNnodes":"རྗེས་མ།"
    },
    "mirador": {
       "return": "བུདྡྷ་ལ་ཕྱིར་ལོག",
@@ -533,12 +538,12 @@
       "downloadE": "འཕྲུལ་ཡིག་ཕབ་ལེན།"
    },
    "access": {
-      "limited20": "འགོ་མཇུག་གཉིས་ནས་ཤོག་ངོས་ཉི་ཤུ་ཉི་ཤུ་ལས་ལྷག་ལྟ་ཀློག་བྱེད་མི་ཐུབ།",
-      "credentials": "དམིགས་བསལ་གྱི་ཐོབ་ཐང་ཡོད་ན་འདིར་བསྣུན།",
       "fairuse1": "BDRC <bold>restricts access<\/bold> to this work (only the first and last 20 images are available online) because the work is under <bold>copyright<\/bold>.",
       "fairuse2": "Please contact",
       "fairuse3": "for information about possibly accessing this work under fair use.",
       "sealed": "BDRC <bold>restricts access<\/bold> to this work because it was provided to BDRC on the condition that we respect <bold>traditional restrictions<\/bold> applied to it. If you have received the proper transmission from a spiritual teacher to access this work or have other questions about how to access this work please contact",
+      "limited20": "འགོ་མཇུག་གཉིས་ནས་ཤོག་ངོས་ཉི་ཤུ་ཉི་ཤུ་ལས་ལྷག་ལྟ་ཀློག་བྱེད་མི་ཐུབ།",
+      "credentials": "དམིགས་བསལ་གྱི་ཐོབ་ཐང་ཡོད་ན་འདིར་བསྣུན།",
       "notyet": "བཤེར་པར་ད་དུང་མི་འདུག",
       "error": "བཤེར་པར་ཁ་ཕྱེ་སྐབས་གནད་དོན་ཞིག་ལྷག་སོང་།",
       "generic": "BDRC has restricted access to this work in accordance with our access policies. You can read those policies here: <policies href='https://bdrc.io/access-policies/' target='_blank'>https://bdrc.io/access-policies/<\/policies>",
@@ -547,6 +552,8 @@
       "fairUseIA1": "This work is <bold>copyrighted<\/bold>. As a result, BDRC can only make very limited portions available for private research and study. The full text of the work is viewable on Internet Archive, a close partner of ours, through their Open Library program.",
       "fairUseIA2": "དྲ་ཐོག་དཔེ་མཛོད་བརྒྱུད་ནས་བརྩམས་ཆོས་འདི་སྔོགས།",
       "not": "བཤེར་པར་མི་འདུག"
+      "imageN":"(བཤེར་པར་འདི་ནི་བདག་དབང་ཅན་ཡིན་པས་བལྟ་མི་ཐུབ།)",
+      "fairuseEtext": "BDRC <bold>restricts access<\/bold> to this work because the work is under <bold>copyright<\/bold>."
    },
    "location": {
       "beginV": "པོད་ {{num,counttobo}} ནས་",
@@ -560,6 +567,7 @@
          "BDRC": "Buddhist Digital Resource Center",
          "adr1": "1430 Massachusetts Ave., 5th floor",
          "adr2": "Cambridge, MA, USA 02138",
+         "adr": "Mailing address:<br/>198 Tremont St. #421<br/>Boston, MA, USA 02116",
          "contact": "འབྲེལ་གཏུགས་བྱ་ཡུལ།",
          "connect": "སྤྱི་ཚོགས་དྲ་ལམ་བརྒྱུད་ནས་ང་ཚོར་འབྲེལ་ཡུལ།",
          "print": "ང་ཚོའི་དྲ་ཐོག་ཏུ་ཡོད་པའི་དཔེ་ཆ་ཁག་དགོས་ཚེ་འདི་ནས་མངགས།",
