--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -426,7 +426,7 @@
          "alalc97": "ALA-LC",
          "latnPinyin": "ཕིན་ཡིག"
       },
-      "x": "སྒྲ་ཐད་བསྒྱུར།"
+      "x": "སྒྲ་ཐད་བསྒྱུར།",
       "latn": "སྒྲ་ཐད་བསྒྱུར།"
    },
    "search": {
@@ -572,7 +572,7 @@
       "quality0": "We acknowledge the poor quality of these scans, which might be difficult to read or in the wrong order, and we apologize for it. We think these might still be useful for scholarship and make them available, while searching for higher quality ones.",
       "fairUseIA1": "This work is <bold>copyrighted<\/bold>. As a result, BDRC can only make very limited portions available for private research and study. The full text of the work is viewable on Internet Archive, a close partner of ours, through their Open Library program.",
       "fairUseIA2": "དྲ་ཐོག་དཔེ་མཛོད་བརྒྱུད་ནས་བརྩམས་ཆོས་འདི་སྔོགས།",
-      "not": "བཤེར་པར་མི་འདུག"
+      "not": "བཤེར་པར་མི་འདུག",
       "imageN":"(བཤེར་པར་འདི་ནི་བདག་དབང་ཅན་ཡིན་པས་བལྟ་མི་ཐུབ།)",
       "fairuseEtext": "BDRC <bold>restricts access<\/bold> to this work because the work is under <bold>copyright<\/bold>."
    },
