add helpers/tooltips on guided search page

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -463,7 +463,8 @@
          "noresultsAsso": "No result associated with {{keyword}} {{type}}"
       },
       "seeO": "See results in other data types",
-      "backToW": "Back to Works"
+      "backToW": "Back to Works",
+      "any":"(Select any)"
    },
    "Rsidebar": {
       "title": "Display Preferences",
