add reset button

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -465,7 +465,8 @@
       "seeO": "See results in other data types",
       "backToW": "Back to Works",
       "any":"(Select any)",
-      "one":"(Select one)"
+      "one":"(Select one)",
+      "reset":"Reset"
    },
    "Rsidebar": {
       "title": "Display Preferences",
