fix css/text for no match case

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -468,7 +468,8 @@
       "one":"(Select one)",
       "reset":"Reset",
       "worktitle":"Work title...",
-      "instancetitle":"Version title..."
+      "instancetitle":"Version title...",
+      "nothing":"No match"
    },
    "Rsidebar": {
       "title": "Display Preferences",
