fix related resources reinitialization (#619)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -263,9 +263,9 @@
       "openEin": "Open in Etext",
       "hasInstance": "Has {{count}} $t(types.instance)",
       "hasInstance_plural": "Has {{count}} $t(types.instance_plural)",
-      "assoc": "{{type}} associated with: <res href='/show/{{- rid}}'>{{- name}}<\/res>",
+      "assoc": "{{type}} associated with: <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "moreres": "More {{txt}} are cataloged, do you want to see them?",
-      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
+      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "openO": "Open in Outline",
       "bdDate":"{{birth}} – {{death}}",
       "bDate":"b. {{num}}",
