more flexible preview/browser limit (#625)

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -384,7 +384,8 @@
       "ordInter": "{{min}}-{{max,ordinal}} c.",
       "see10More": "See 10 More",
       "showR": "Show {{count}} reproductions",
-      "hideR": "Hide reproductions"
+      "hideR": "Hide reproductions",
+      "previewN": "preview {{count}}"
    },
    "lang": {
       "en": "English",
