--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -220,7 +220,8 @@
       "tmp:noteMatch": "Note",
       "tmp:possibleAccess": "Access Possible",
       "tmp:catalogOnly": "Catalog Only",
-      "tmp:nonReleasedItems": "Non-released items"
+      "tmp:nonReleasedItems": "Non-released items",
+      "tmp:colophonMatch":"Colophon Match"
    },
    "result": {
       "open": "Open",
