--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -520,7 +520,8 @@
       "beginL": "起始行{{num}}",
       "endV": "结束卷{{num}}",
       "endP": "结束页{{num}}",
-      "endL": "结束行{{num}}"
+      "endL": "结束行{{num}}",
+      "tooltip": "No image indication found.<newL/>You might have to find the right page by yourself."
    },
    "footer": {
       "BDRC": "Buddhist Digital Resource Center",
