--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -489,7 +489,9 @@
       "load": "Loading {{count}} results<newline/>Please wait...",
       "no": "No result",
       "cancel":"Cancel",
-      "loading":"Loading..."
+      "loading":"Loading...",
+      "hidden":"Some results were hidden because they currently are not released.",
+      "showU":"Show non-released items"
    },
    "Rsidebar": {
       "title": "Display Preferences",
