--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -387,7 +387,10 @@
       "result": "{{count}}条结果",
       "filters": {
          "noresults": "没有符合条件的结果",
-         "noresultsAsso": "No result associated with {{keyword}} {{type}}"
+         "noresultsAsso": "No result associated with {{keyword}} {{type}}",
+         "facets":" with the filters you set",
+         "persons":"<parag>BDRC contains thousands of person records, you may want to try modifying your search to get the best results.<newline/><list>Search on a shorter string of syllables by eliminating titles, geographical names, and so on<newline/>Ex: <ita>'jam dbyangs nor bu</ita> instead of <ita>co ne sa skyong 'jam dbyangs nor bu</ita></list><list>Double check your search for typos</list></parag>",
+         "instances":"<parag>BDRC contains thousands of texts, you may want to try modifying your search to get the best results.<newline/><list>Search on a shorter string of syllables, preferably the core part of the title<newline/>Ex: <ita>lam rim chung ngu'i zin brisw</ita> instead of <ita>lam rim chung ngu'i zin bris blo gsal rgya mtsho'i 'jug ngogs</ita></list><list>Double check your search for typos</list></parag>"
       },
       "hidden":"Some results were hidden because they currently are not released.",
       "showU":"Show non-released items"
