add toggle button for Other Matches (#659)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -119,7 +119,9 @@
       "lastS": "སྤེལ་དུས།",
       "reverseS": "(reverse)",
       "volumeN": "པོད་གྲངས།",
-      "roleN": "མི་སྣའི་མཚན།"
+      "roleN": "མི་སྣའི་མཚན།",
+      "showAll":"show all matches",
+      "hideAll":"best matches only"
    },
    "copyright": {
       "open": "བཀག་རྒྱ་མེད་པ།",
