--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -446,7 +446,8 @@
       "seeO": "གཞི་གྲངས་རིགས་གཞན་པའི་བཙལ་འབྲས་ལ་ལྟོས།",
       "backToW": "བརྩམས་ཆོས་སྟེང་ཕྱིར་ལོག",
       "hidden":"Some results were hidden because they currently are not released.",
-      "showU":"Show non-released items"
+      "showU":"Show non-released items",
+      "toggleM": "Toggle Map"
    },
    "Rsidebar": {
       "title": "རྣམ་པ་སྒྲིག་ས།",
