--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -497,7 +497,8 @@
       "cancel":"Cancel",
       "loading":"Loading...",
       "hidden":"Some results were hidden because they currently are not released.",
-      "showU":"Show non-released items"
+      "showU":"Show non-released items",
+      "toggleM": "Toggle Map"
    },
    "Rsidebar": {
       "title": "Display Preferences",
