enable custom language list order in profile (WIP: transliteration UI)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -427,7 +427,8 @@
          "xDts": "DTS",
          "xIast": "IAST",
          "alalc97": "ALA-LC",
-         "latnPinyin": "ཕིན་ཡིག"
+         "latnPinyin": "ཕིན་ཡིག",
+         "incHelper": "Sanskrit or Pāli"
       },
       "x": "སྒྲ་ཐད་བསྒྱུར།",
       "latn": "སྒྲ་ཐད་བསྒྱུར།"
