cleaner use of localStorage

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -409,6 +409,7 @@
          "saXIast": "Sanskrit (IAST)",
          "saXNdia": "Sanskrit (Lenient)",
          "saDeva": "Sanskrit (Devanagari)",
+         "incXIast": "Indic (Sanskrit or Pāli, IAST)",
          "incXNdia": "Indic (Sanskrit or Pāli, Lenient)",
          "en": "English",
          "pi": "Pāli",
