--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -428,7 +428,8 @@
          "xIast": "IAST",
          "alalc97": "ALA-LC",
          "latnPinyin": "ཕིན་ཡིག",
-         "incHelper": "Sanskrit or Pāli"
+         "incHelper": "Sanskrit or Pāli",
+         "unicode": "Unicode"
       },
       "x": "སྒྲ་ཐད་བསྒྱུར།",
       "latn": "སྒྲ་ཐད་བསྒྱུར།"
