allow search in khmer unicode (#687)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -395,7 +395,8 @@
          "xDts": "DTS",
          "alalc97": "ALA-LC",
          "latnPinyin": "ཕིན་ཡིག",
-         "piXNdia": "Pali / Burmese / Khmer (transliterated)"
+         "piXNdia": "Pali / Burmese / Khmer (transliterated)",
+         "kmXIast":"Khmer (IAST)"
       },
       "tip": {
          "zh": "རྒྱ་ཡིག",
