--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -421,6 +421,7 @@
          "boAlaLc": "Tibetan (ALA-LC)",
          "other": "Other",
          "km": "Khmer",
+         "kmXIast": "Khmer (IAST)",
          "inc": "Indic",
          "sa": "Sanskrit",
          "hans": "Simplified",
