--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -348,7 +348,8 @@
          "xDts": "DTS转写",
          "alalc97": "ALA-LC转写",
          "latnPinyin": "拼音",
-         "piXNdia": "Pali / Burmese / Khmer (transliterated)"
+         "piXNdia": "Pali / Burmese / Khmer (transliterated)",
+         "kmXIast":"Khmer (IAST)"
       },
       "tip": {
          "zh": "中文",
