--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -300,6 +300,7 @@
       "photo": {
          "hover": "Update profile picture",
          "label": "Profile Picture Url",
+         "info": "Leave empty to use your profile picture from {{google}}",
          "helperText": "Paste a direct link to an existing picture",
          "error": "Error: cannot find image, please check your link"
       },
