fix missing attribute for Link in translations (#688)

--- a/src/translations/bo.json
+++ b/src/translations/bo.json
@@ -236,9 +236,9 @@
       "openEin": "འཕྲུལ་ཡིག་ནང་སྟོན།",
       "hasInstance": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
       "hasInstance_plural": "དཔེ་རྒྱུན་ {{count,counttobo}} ཡོད།",
-      "assoc": "{{type}} འདི་དག་དང་འབྲེལ་ཡོད་: {{- name}}",
+      "assoc": "{{type}} འདི་དག་དང་འབྲེལ་ཡོད་: <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "moreres": "འདི་ལས་' {{txt}} མང་བ་འདུག, དེ་དག་ལ་བལྟ་འདོད་ཡོད་དམ།",
-      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
+      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "openO": "དཀར་ཆག་ནང་སྒོ་ཕྱེ།",
       "bdDate":"{{birth}} – {{death}}",
       "bDate":"འཁྲུངས་ལོ། {{num,counttobo}}",
