--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -201,10 +201,10 @@
       "hideC": "收起前后文",
       "openE": "开启Etext",
       "hasInstance": "有{{count}}实例",
-      "assoc": "{{type}}关联于: <res href='/show/{{- rid}}'>{{- name}}<\/res>",
+      "assoc": "{{type}}关联于: <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "moreres": "是否想阅览更多的{{txt}}？",
       "openEin": "Open in Etext",
-      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res href='/show/{{- rid}}'>{{- name}}<\/res>",
+      "inEtext": "Results for <key>{{- keyword}}<\/key> <key>[{{language}}]<\/key><br/>in <res to='/show/{{- rid}}'>{{- name}}<\/res>",
       "openO": "Open in Outline",
       "bdDate":"{{birth}} – {{death}}",
       "bDate":"出生{{num}}",
