--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -498,7 +498,8 @@
       "loading":"Loading...",
       "hidden":"Some results were hidden because they currently are not released.",
       "showU":"Show non-released items",
-      "toggleM": "Toggle Map"
+      "toggleM": "Toggle Map",
+      "kw":"(Search any)"
    },
    "Rsidebar": {
       "title": "Display Preferences",
