--- a/src/translations/transifex.yml
+++ b/src/translations/transifex.yml
@@ -2,6 +2,5 @@ filters:
   - filter_type: file
     file_format: KEYVALUEJSON
     source_language: en
-    source_file: https://github.com/buda-base/public-digital-library/tree/master/src/translations/en.json
-    # path expression to translation files, must contain <lang> placeholder
+    source_file: src/translations/en.json
     translation_files_expression: 'https://github.com/buda-base/public-digital-library/tree/master/src/translations/<lang>.json'
