--- a/src/translations/transifex.yml
+++ b/src/translations/transifex.yml
@@ -1,6 +1,6 @@
 filters:
   - filter_type: file
-    file_format: KEYVALUEJSON
+    file_format: JSON
     source_language: en
     source_file: src/translations/en.json
     translation_files_expression: 'https://github.com/buda-base/public-digital-library/tree/master/src/translations/<lang>.json'
